--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -268,8 +268,8 @@
   "copyProtocol": "Copy block hyperlink",
   "uploadAssets2CDN": "Upload asset files to cloud",
   "notSupport1": "Does not support drag and drop across notebooks",
-  "keymapTip": "After some shortcut keys are modified, you need to click the refresh button to take effect",
-  "keymapTip2": "Use default shortcut keys",
+  "keymapTip": "Click Refresh after modifying shortcut keys to enable new mappings.",
+  "keymapTip2": "Click Reset to revert keyboard shortcuts to defaults.",
   "searchLimit": "The number of search results displayed",
   "searchLimit1": "If the amount of data is large, do not configure the value too large, the default is <code>64</code>",
   "searchCaseSensitive": "Case Sensitive",
@@ -386,11 +386,11 @@
   "userLocalPDF": "Open with local PDF tool",
   "copyID": "Copy ID",
   "newBookmark": "Create a bookmark label",
-  "generateHistory": "History Generation Interval (minutes, set to 0 to disable)",
-  "generateHistoryInterval": "History is automatically generated when editing or deleting, which can be viewed and rolled back in the data history",
+  "generateHistory": "History Generation Interval (0 disables history generation)",
+  "generateHistoryInterval": "Minutes between editing / deletion history snapshots. (view or roll-back in Data History)",
   "historyRetentionDays": "History Retention Days",
-  "historyRetentionDaysTip": "Historical data exceeding the retention days will be automatically and completely deleted",
-  "clearHistory": "Clear all history",
+  "historyRetentionDaysTip": "Set how long history data is retained before deletion.",
+  "clearHistory": "Clear All History Now",
   "confirmClearHistory": "Are you sure you want to completely delete all historical data in the workspace?",
   "fileNameASC": "Name Alphabet ASC",
   "fileNameDESC": "Name Alphabet DESC",
@@ -406,7 +406,7 @@
   "enterFullscreen": "Enter Full Screen",
   "exitFullscreen": "Exit Full Screen",
   "clearUnused": "Unreferenced assets",
-  "clearAll": "Are you sure to clean up all unreferenced assets?",
+  "clearAll": "Are you sure you want to clean up all unreferenced assets?",
   "paste": "Paste",
   "pasteRef": "Paste Block Ref",
   "pasteEmbed": "Paste Block Embed",
@@ -529,25 +529,25 @@
   "min": "Min",
   "restore": "Restore",
   "max": "Max",
-  "md2": "Code block ligature",
-  "md3": "After enabling, the code block will display the ligature",
+  "md2": "Code Block Ligature",
+  "md3": "Enable to display ligature replacements in code blocks. (eg: != displays as ≠ )"
   "md4": "Automatically indent the beginning of paragraphs to conform to traditional Chinese typesetting habits",
-  "md7": "Whether to display the network picture corner mark",
-  "md8": "After enabling, if the picture is a web file (non-local asset file), it will display a corner mark",
-  "md12": "Whether to display bookmark, name, alias, memo and reference count",
-  "md16": "After enabling, if there is such information, it will be displayed on the upper right side of the block",
-  "md27": "The code block shows the line number",
-  "md28": "After enabling, the code block will display the line number",
-  "md29": "Number of Tab Spaces",
-  "md30": "Replaces with spaces only when tab is pressed, does not replace tabs in clipboard with spaces",
-  "md31": "Code block wraps",
-  "md32": "After enabling, the content in the code block will wrap automatically",
+  "md7": "Remote Image Hint",
+  "md8": "Enable to show a hint on any image that is not locally stored.",
+  "md12": "Block Metadata Hints",
+  "md16": "Enable to display bookmark, name, alias, memo, and reference counts in upper right corner of blocks.",
+  "md27": "Code Block Line Numbers",
+  "md28": "Enable to show line numbers in code blocks.",
+  "md29": "Tab Spaces",
+  "md30": "Set the number of spaces a tab press will insert.  (pasted tabs are not replaced)",
+  "md31": "Code Block Word Wrap",
+  "md32": "Enable to wrap content inside a code block.",
   "md33": "Virtual Reference",
-  "md34": "After enabling, it will automatically identify the possible reference relationship according to the name, alias and anchor text of the existing block ref",
-  "md35": "Virtual Reference keyword exclusion list",
+  "md34": "Enable to allow automatic identification of possible reference relationships (Uses name, alias and anchor text of the existing block ref)",
+  "md35": "Virtual Reference Keyword Exclusion List",
   "md36": "Use the English comma <code>,</code> to separate, the comma itself can be escaped by <code>\\,</code>",
-  "md37": "The maximum length of block ref dynamic anchor text",
-  "md38": "The maximum length of the anchor text that is automatically rendered when the block ref anchor text is not customized, the default is <code>96</code> characters",
+  "md37": "Block Ref Dynamic Anchor Text Max Length",
+  "md38": "Set the max number of characters for automatically generated (non customized) anchor text,  Default: 96",
   "md39": "PlantUML Serve Address",
   "md40": "Leave blank to restore default <code>https://www.plantuml.com/plantuml/svg/~1</code>",
   "fileTree2": "The doc tree will automatically select the current document when the editor tab is switched",
